src/objects/FlaggedAccount__c.object
<CustomObject>
    <fields>
        <fullName>Accts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FlaggedAccounts</relationshipLabel>
        <relationshipName>FlaggedAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>account__c</fullName>
        <label>account</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>date__c</fullName>
        <label>date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>journal__c</fullName>
        <label>journal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>open__c</fullName>
        <label>open</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>reason__c</fullName>
        <label>reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>resolutionDate__c</fullName>
        <label>resolutionDate</label>
        <type>Date</type>
    </fields>
    <label>FlaggedAccount</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Flagged Acct No. - {0000}</displayFormat>
        <label>FlaggedAccount Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FlaggedAccounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>